sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:7: error: reassignment to val
        j=j+1
         ^AlgBubbleSort2:9: error: reassignment to val
        j=j+1
         ^