sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2(){
  for(i <- getNombreValeurs()-1 to 0){
    for(j <- 0 to i-1){
      if (plusPetit(j,j+1)==false){
      	echange(j,j+1)
      	j=j+1
    	}else{
      	j=j+1
    }
    }
  }
}

